# wordcount-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  wordcount.py
.github/workflows/: ci.yml
tests/: test_wordcount.py
