[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wordcount-cli"
version = "0.1.0"
description = "Tiny Python CLI that prints line, word, and character counts for a text file."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Berke Kidak" }]
dependencies = []

[project.scripts]
wordcount = "wordcount:main"

[project.optional-dependencies]
dev = ["pytest"]